@@ -29,15 +29,12 @@
 
 FIND_PACKAGE(PythonInterp)
 
-SET(DATA ${CMTK_DATA_ROOT}/testing/inputs)
-SET(CMTK_DATA_ROOT_BASELINE ${CMTK_DATA_ROOT}/testing/baseline CACHE PATH "Root directory of test baselines")
-
 IF(BUILD_APPS)
-	SUBDIRS(apps)
+  SUBDIRS(apps)
 ENDIF(BUILD_APPS)
 
 IF(BUILD_GUI)
-	SUBDIRS(gui)	
+  SUBDIRS(gui)	
 ENDIF(BUILD_GUI)
 
 SUBDIRS(libs)
